# hackharvard-muse-backend

./: EEG_recording_2025-10-04-04.44.36.csv  README.md  blink_w_delta.ipynb  double_blink.csv  explore_eeg_data.ipynb  left_blink.csv  no_blink.csv  pyproject.toml  requirements.txt  right_blink.csv  run.ps1  single_blink.csv  static.csv  test.csv
dev/: blink_w_buffer.ipynb  blink_w_delta.ipynb  everything.csv  new_everything.csv  single_blink.csv
src/events/: handler.py  math.py
src/keybindings/: emit.py  presets.py
src/main/: cli.py
